--- a/Get2KnowMe/package.json
+++ b/Get2KnowMe/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
+    "lint": "eslint client",
     "preview": "vite preview",
     "server:dev": "node --env-file=.env --watch server/server.js",
     "server:start": "node --env-file=.env server/server.js",
-    "server:prod": "NODE_ENV=production node --env-file=.env server/server.js"
+    "server:prod": "NODE_ENV=production node --env-file=.env server/server.js",
+    "start": "npm run server:start",
+    "dev:all": "concurrently \"npm run server:dev\" \"npm run dev\""
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
@@ -27,6 +29,7 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.2",
+    "concurrently": "^9.2.0",
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
