--- a/Get2KnowMe/package.json
+++ b/Get2KnowMe/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.16.1",
+    "qrcode": "^1.5.4",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
