--- a/Get2KnowMe/package.json
+++ b/Get2KnowMe/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview",
     "server:dev": "node --env-file=.env --watch server/server.js",
     "server:start": "node --env-file=.env server/server.js",
-    "server:prod": "NODE_ENV=production node --env-file=.env server/server.js",
-    "start": "npm run server:start",
+    "server:prod": "NODE_ENV=production node server/server.js",
+    "start": "npm run server:prod",
     "dev:all": "concurrently \"npm run server:dev\" \"npm run dev\""
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.5.2",
+    "@zxing/library": "^0.21.3",
     "bcrypt": "^6.0.0",
     "bootstrap": "^5.3.7",
     "cors": "^2.8.5",
@@ -26,18 +28,17 @@
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.3"
+    "react-router-dom": "^7.6.3",
+    "vite": "^7.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react": "^4.5.2",
     "concurrently": "^9.2.0",
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.2.0",
-    "vite": "^7.0.0"
+    "globals": "^16.2.0"
   }
 }
