Adding mongoose-field-encryption to encrypt personal data from communication passport in database. Update .env.example to include FIELD_ENCRYPTION_SECRET for collaborator use. Update User.js schmea to include encryption protocols.

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,6 @@ PORT=3001
 # Frontend URL for CORS (adjust as needed)
 CLIENT_URL=http://localhost:5173
 
+# Mongoose Field Encryption Key (for encrypting sensitive fields in MongoDB)
+FIELD_ENCRYPTION_SECRET=your_field_encryption_secret_here
+
