--- a/Get2KnowMe/package.json
+++ b/Get2KnowMe/package.json
@@ -25,6 +25,7 @@
     "jwt-decode": "^4.0.0",
     "libphonenumber-js": "^1.12.9",
     "mongoose": "^8.16.1",
+    "mongoose-field-encryption": "^7.0.1",
     "qrcode": "^1.5.4",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
