--- a/Get2KnowMe/package.json
+++ b/Get2KnowMe/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint client",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "preview": "vite preview",
     "server:dev": "node --env-file=.env --watch server/server.js",
     "server:start": "node --env-file=.env server/server.js",
@@ -42,6 +43,9 @@
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.2.0"
+    "globals": "^16.2.0",
+    "jest": "^30.0.4",
+    "mongodb-memory-server": "^10.1.4",
+    "supertest": "^7.1.1"
   }
 }
