Adding Resend API Key to .env.example

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,6 @@ CLIENT_URL=http://localhost:5173
 # Mongoose Field Encryption Key (for encrypting sensitive fields in MongoDB)
 FIELD_ENCRYPTION_SECRET=your_field_encryption_secret_here
 
+# Resend API KEY
+RESEND_API_KEY=your_resend_api_key_here
+
