--- a/Get2KnowMe/package.json
+++ b/Get2KnowMe/package.json
@@ -16,6 +16,8 @@
     "dev:all": "concurrently \"npm run server:dev\" \"npm run dev\""
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^7.0.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@vitejs/plugin-react": "^4.5.2",
     "@zxing/library": "^0.21.3",
     "bcrypt": "^6.0.0",
