--- a/Get2KnowMe/package.json
+++ b/Get2KnowMe/package.json
@@ -22,13 +22,20 @@
     "@zxing/library": "^0.21.3",
     "bcrypt": "^6.0.0",
     "bootstrap": "^5.3.7",
+    "compression": "^1.8.1",
+    "connect-mongo": "^5.1.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^8.0.1",
+    "express-validator": "^7.2.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "libphonenumber-js": "^1.12.9",
     "mongoose": "^8.16.1",
     "mongoose-field-encryption": "^7.0.1",
+    "morgan": "^1.10.1",
     "qrcode": "^1.5.4",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
@@ -36,7 +43,8 @@
     "react-phone-number-input": "^3.4.12",
     "react-router-dom": "^7.6.3",
     "resend": "^4.6.0",
-    "vite": "^7.0.0"
+    "vite": "^7.0.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
